k3s/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: psi-opora
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: registry.orixon.ru/psi-opora-dashboard:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: psi-opora
spec:
  type: NodePort
  selector:
    app: dashboard
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30010
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-http
  namespace: psi-opora
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`psi-opora-dashboard.orixon.ru`)
      kind: Rule
      services:
        - name: dashboard
          port: 3000
      middlewares:
        - name: redirect-to-https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-https
  namespace: psi-opora
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`psi-opora-dashboard.orixon.ru`)
      kind: Rule
      services:
        - name: dashboard
          port: 3000
  tls:
    certResolver: letsencrypt
